# base64_server

./: .gitignore  Dockerfile  README.md  README_EN.md  base64_demo.py  base64_server.py  pyproject.toml  smithery.yaml
base64_server/tests/: __init__.py  conftest.py  test_image_encoding.py  test_prompts.py  test_resources.py  test_text_encoding.py
